# elaunira-airflow-providers-r2index

./: .gitignore  LICENSE  README.md  pyproject.toml
src/elaunira/airflow/: __init__.py
src/elaunira/airflow/provider/: __init__.py
src/elaunira/airflow/provider/r2index/: __init__.py
src/elaunira/airflow/provider/r2index/hooks/: __init__.py  r2index.py
src/elaunira/airflow/providers/: __init__.py
src/elaunira/airflow/providers/r2index/: __init__.py
src/elaunira/airflow/providers/r2index/decorators/: __init__.py  r2index.py
src/elaunira/airflow/providers/r2index/hooks/: __init__.py  r2index.py
src/elaunira/airflow/providers/r2index/links/: __init__.py  r2index.py
src/elaunira/airflow/providers/r2index/operators/: __init__.py  r2index.py
