[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "elaunira-airflow-providers-r2index"
version = "0.4.1"
description = "Airflow provider for Elaunira R2Index connections"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "apache-airflow>=3.0.0",
    "apache-airflow-providers-hashicorp",
    "elaunira-r2index",
]

[project.urls]
Repository = "https://github.com/elaunira/elaunira-airflow-providers-r2index"

[project.entry-points."apache_airflow_provider"]
provider_info = "elaunira.airflow.providers.r2index:get_provider_info"

[tool.hatch.build.targets.wheel]
packages = ["src/elaunira"]
